--- a/config.json
+++ b/config.json
@@ -1,6 +1,8 @@
 {
-    "strm_output_folder" : "/media/Youtube",
+    "strm_output_folder" : "strm\\",
     "ytdlp2strm_host" : "127.0.0.1",
     "ytdlp2strm_port" : "5000",
-    "ytdlp2strm_channels_list_file" : "channel_list.json"
+    "ytdlp2strm_channels_list_file" : "channel_list.json",
+    "ytdlp2strm_days_dateafter" : "60", 
+    "ytdlp2strm_videos_limit" : "100"
 }
