--- a/config.json
+++ b/config.json
@@ -4,5 +4,7 @@
     "ytdlp2strm_port" : "5000",
     "ytdlp2strm_channels_list_file" : "channel_list.json",
     "ytdlp2strm_days_dateafter" : "10", 
-    "ytdlp2strm_videos_limit" : "10"
+    "ytdlp2strm_videos_limit" : "10",
+    "ytdlp2strm_sponsorblock" : false,
+    "ytdlp2strm_sponsorblock_cats" : "sponsor"
 }
