twitch videos tab

--- a/plugins/twitch/config.example.json
+++ b/plugins/twitch/config.example.json
@@ -1,4 +1,6 @@
 {
     "strm_output_folder" : "/media/Twitch",
-    "channels_list_file" : "./plugins/twitch/channel_list.json"
+    "channels_list_file" : "./plugins/twitch/channel_list.json",
+    "days_dateafter" : "10", 
+    "videos_limit" : "10"
 }
