--- a/plugins/crunchyroll/config.example.json
+++ b/plugins/crunchyroll/config.example.json
@@ -2,5 +2,6 @@
     "strm_output_folder" : "/media/Crunchyroll",
     "channels_list_file" : "./plugins/crunchyroll/channel_list.json",
     "crunchyroll_cookies_file" : "/etc/www.crunchyroll.com_cookies.txt",
-    "crunchyroll_audio_lang" : "JAP"
+    "crunchyroll_subtitle_language" : "es-ES",
+    "crunchyroll_audio_language" : "ja-JP"
 }
