crunchyroll plugin proxy feature

--- a/plugins/crunchyroll/config.example.json
+++ b/plugins/crunchyroll/config.example.json
@@ -3,5 +3,7 @@
     "channels_list_file" : "./plugins/crunchyroll/channel_list.json",
     "crunchyroll_cookies_file" : "/etc/www.crunchyroll.com_cookies.txt",
     "crunchyroll_subtitle_language" : "es-ES",
-    "crunchyroll_audio_language" : "ja-JP"
+    "crunchyroll_audio_language" : "ja-JP",
+    "proxy" : false,
+    "proxy_url" : ""
 }
