--- a/plugins/sx3/config.example.json
+++ b/plugins/sx3/config.example.json
@@ -2,5 +2,7 @@
     "strm_output_folder" : "/media/SX3",
     "channels_list_file" : "./plugins/sx3/channel_list.json",
     "proxy" : false,
-    "proxy_url" : ""
+    "proxy_url" : "",
+    "http_get_proxy" : false,
+    "http_get_proxy_url" : ""
 }
