cleaning code, function migrated to classes, experiments folder, working ui

--- a/plugins/pokemon_tv/config.example.json
+++ b/plugins/pokemon_tv/config.example.json
@@ -1,5 +1,6 @@
 {
     "strm_output_folder" : "/media/pokemon_tv",
+    "ytdlp2strm_keep_old_strm": true,
     "channels_list_file" : "./plugins/pokemon_tv/channel_list.json",
     "proxy" : false,
     "proxy_url" : "",
