ytdlp2strm_temp_file_duration general config

--- a/config/config.example.json
+++ b/config/config.example.json
@@ -1,5 +1,6 @@
 {
     "ytdlp2strm_host" : "127.0.0.1",
     "ytdlp2strm_port" : "5000",
-    "ytdlp2strm_keep_old_strm" : true
+    "ytdlp2strm_keep_old_strm" : "True",
+    "ytdlp2strm_temp_file_duration" : "86400"
 }
