--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         - AM_I_IN_A_DOCKER_CONTAINER=Yes
         - DOCKER_PORT=5000
       volumes:
-        - D:/dev/media:/media:/media
+        - D:/dev/media:/media
       ports:
         - 5000:5000
       restart: always
