crunchyroll bridge mode experimental, crunchyroll mutate_values, requierments.txt yt-dlp nightly update, readme, tv3cat

--- a/plugins/crunchyroll/config.example.json
+++ b/plugins/crunchyroll/config.example.json
@@ -6,9 +6,9 @@
     "crunchyroll_audio_language" : "ja-JP",
     "proxy" : false,
     "proxy_url" : "",
-    "crunchyroll_auth" : "cookies",
+    "crunchyroll_auth" : "login",
     "crunchyroll_browser" : "",
-    "crunchyroll_useragent" : "",
+    "crunchyroll_useragent" : "Mozilla/5.0 (X11; Linux i686; rv:126.0) Gecko/20100101 Firefox/126.0",
     "crunchyroll_username" : "",
     "crunchyroll_password" : "",
     "jellyfin_preload" : "False", 
