rewrite youtbue pugin, and fix stuck threads on stop ytdlp2strm service

--- a/plugins/youtube/config.example.json
+++ b/plugins/youtube/config.example.json
@@ -4,5 +4,7 @@
     "days_dateafter" : "10", 
     "videos_limit" : "10",
     "sponsorblock" : false,
-    "sponsorblock_cats" : "sponsor"
+    "sponsorblock_cats" : "sponsor",
+    "cookies" : "cookies-from-browser",
+    "cookie_value" : "chrome"
 }
