--- a/plugins/youtube/config.example.json
+++ b/plugins/youtube/config.example.json
@@ -6,6 +6,6 @@
     "sponsorblock" : false,
     "sponsorblock_cats" : "sponsor",
     "cookies" : "cookies-from-browser",
-    "cookie_value" : "chrome",
+    "cookie_value" : "firefox",
     "lang" : "en"
 }
